# AI_Farmer_Project

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h
main/1wire/: owb.c
main/1wire/include/: owb.h
main/adc/: adc_init.c
main/adc/include/: adc_init.h
main/app/: application.c
main/app/include/: application.h
main/http/: http.c
main/http/include/: http.h
main/measurement/: measurement.c
main/measurement/include/: measurement.h
main/sensors/dht22/: dht22.c
main/sensors/ds18b20/: ds18b20.c
main/sensors/yl-69/: yl_69.c
main/sensors/yl-69/include/: yl_69.h
main/wifi/: wifi.c
main/wifi/include/: wifi.h
